Fix spacing on last name (sidedar)

--- a/css/base.css
+++ b/css/base.css
@@ -33,7 +33,7 @@ a {
     .sidebar .name #lname {
       font-size: 17px;
       font-weight: bold;
-      letter-spacing: 1.5px;
+      letter-spacing: 1.9px;
       color: black; }
   .sidebar .meta a {
     margin-left: 0px;
